--- a/index.html
+++ b/index.html
@@ -48,16 +48,25 @@
             pointer-events: none;
             z-index: 50;
         }
+        
+        /* Custom scrollbar for sci-fi feel */
+        ::-webkit-scrollbar { width: 4px; }
+        ::-webkit-scrollbar-track { background: #080A0F; }
+        ::-webkit-scrollbar-thumb { background: #1a1d25; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #00F3FF; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "three": "https://esm.sh/three@0.170.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
+    "three": "https://esm.sh/three@0.173.0",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.11?external=react,react-dom"
   }
 }
 </script>
